finally fixed the alignment bug in header img

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,9 @@
 
 /*  */
 
-.height {
+/* .height {
   height: 45vh;
-}
+} */
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
